@@ -1,3 +1,8 @@
+2015-03-04  Simon Marchi  <simon.marchi@ericsson.com>
+
+	* lib/mi-support.exp (mi_expect_interrupt): Accept
+	alternative event for when in all-stop mode.
+
 2015-03-04  Pedro Alves  <palves@redhat.com>
 
 	* gdb.threads/thread-specific-bp.exp: Delete "info threads" test.
